# Laboratorio1_IA_CD

./: .gitignore  README.md  X_train.csv  main.py  pyproject.toml  requirements.txt  sprint1_preparacion.ipynb  sprint2_modelado_evaluacion.ipynb  sprint3_despliegue_documentacion.ipynb  y_test.csv
data/processed/: X_test.csv  dry_bean_clean.csv  y_train.csv
data/raw/: README.md
notebooks/: 01_laboratorio_drybean.ipynb  01_sprint1_preparacion.ipynb  02_sprint2_modelado_evaluacion.ipynb  03_sprint3_despliegue_documentacion.ipynb
src/: laboratorio_drybean.py
